<resources>
    <string name="app_name">Three In A Row</string>
    <string name="btn_play">Play</string>
    <string name="btn_help">Tutorial</string>
    <string name="h_title">Three In A Row</string>
    <string name="title_activity_play">Play</string>
    <string name="lose">You Lose</string>
    <string name="lose_title">Game Over</string>
    <string name="next_color">Next Color:</string>
    <string name="grid_size_seek_bar">Grid: %1$d X %1$d</string>
    <string name="title_activity_help">Help</string>
    <string name="reset_settings">Reset Settings</string>
    <string name="restart">Restart</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="home">Home</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="show_high_scores">Show High Scores</string>
    <string name="high_scores">High Scores</string>
    <string name="difficulty">Difficulty:</string>
    <string name="new_high_score">New High Score</string>
    <string name="name">Name:</string>
    <string name="play_again">Submit</string>
    <string name="back">Quit</string>
    <string name="noRowstxt">No Records For These Parameters</string>
    <string name="swipe_to_play">Swipe To Play</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
</resources>
