<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Highscores"
    tools:showIn="@layout/activity_highscores">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/high_scores"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/highScoreSpinner"
        android:layout_width="250dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:entries="@array/difficulty_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <SeekBar
        android:id="@+id/gridSeekHighScores"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="250dp"
        android:layout_height="31dp"
        android:layout_marginEnd="16dp"
        android:max="3"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="@+id/lblGridSeekHighScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lblGridSeekHighScores"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblGridSeekHighScores"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/gridSeek"
        android:text="@string/grid_size_seek_bar"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="94dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/difficulty"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblGridSeekHighScores" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/highScoreRecyclerView"
        android:layout_width="368dp"
        android:layout_height="310dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/noRecordstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toTopOf="@+id/highScoreRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highScoreSpinner" />

</android.support.constraint.ConstraintLayout>